[package]
name = "yee-branch"
version = "0.6.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "yee-branch"
path = "src/main.rs"

[dependencies]
error-chain = "0.12"
futures = "0.1"
ctrlc = { version = "3.0", features = ["termination"] }
log = "0.4"
tokio = "0.1"
exit-future = "0.1"
parking_lot = "0.7.1"
hex-literal = "0.1"
parity-codec = "3.2"
trie-root = "0.12.0"
sr-io = { git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0" }
substrate-cli = { git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0" }
primitives = { package = "substrate-primitives", git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0" }
substrate-executor = { git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0" }
substrate-service = { git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0" }
inherents = { package = "substrate-inherents", git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0" }
transaction-pool = { package = "substrate-transaction-pool", git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0" }
network = { package = "substrate-network", git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0" }
consensus = { package = "substrate-consensus-aura", git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0" }
substrate-client = {  git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0" }
basic-authorship = { package = "substrate-basic-authorship", git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0" }
yee-branch-runtime = { path = "runtime" }
signal-hook = { version = "0.1.11", features = ["tokio-support"] }
structopt = "0.2"

# yeeroot
yee-bootnodes-router = { package = "yee-bootnodes-router", git = "https://github.com/yeeco/yeeroot", rev = "122b495739b05ae091401cec1fe68a57a9ad7f95" }
yee-consensus = { package = "yee-consensus-pow", git = "https://github.com/yeeco/yeeroot.git", rev = "122b495739b05ae091401cec1fe68a57a9ad7f95" }

# yeebranch
yee-root-port = { package = "yee-root-port", path = "srml/yee-root-port", default_features = false }
yee-branch-dev = { package = "yee-branch-dev", path = "dev" }
yee-root-chain = { package = "yee-root-chain", path = "root/chain" }

[build-dependencies]
vergen = "3"
