[package]
name = "yee-root-chain"
version = "0.6.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
substrate-service = { git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0" }
substrate-cli = { git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0" }
substrate-client = { git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0" }
substrate-network = { package = "substrate-network", git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0" }
sr-primitives = { package = "sr-primitives", git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0" }
error-chain = "0.12"
app_dirs = "1.2"
names = "0.11.0"
log = "0.4"
ansi_term = "0.11"
futures = "0.1.17"

# yeeroot
yee-cli = { git = "https://github.com/yeeco/yeeroot.git", rev = "122b495739b05ae091401cec1fe68a57a9ad7f95", features = ["custom-wasm-code"] }
yee-consensus = { package = "yee-consensus-pow", git = "https://github.com/yeeco/yeeroot.git", rev = "122b495739b05ae091401cec1fe68a57a9ad7f95"}
yee-bootnodes-router = { package = "yee-bootnodes-router", git = "https://github.com/yeeco/yeeroot", rev = "122b495739b05ae091401cec1fe68a57a9ad7f95" }
yee-sharding = { package = "yee-sharding", git = "https://github.com/yeeco/yeeroot.git", rev = "122b495739b05ae091401cec1fe68a57a9ad7f95"}
yee-sharding-primitives = { package = "yee-sharding-primitives", git = "https://github.com/yeeco/yeeroot.git", rev = "122b495739b05ae091401cec1fe68a57a9ad7f95"}
yee-pow-primitives = { package = "yee-consensus-pow-primitives", git = "https://github.com/yeeco/yeeroot.git", rev = "122b495739b05ae091401cec1fe68a57a9ad7f95"}
